--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang=kr dir="ltr">
+<html lang="en" dir="ltr">
   <head>
+    <title>Web</title>
     <meta charset="utf-8">
-    <title>Web-lecture</title>
   </head>
   <body>
-    <h1>Web-lecture</h1>
-    손수민
+    <h1><a href="index.html">WEB</a></h1>
+    <ol>
+      <li><a href="01.html">HTML</a></li> <!--01.html-->
+      <li><a href="02.html">CSS</a></li> <!--02.html-->
+      <li><a href="03.html">JavaScript</a></li> <!--03.html-->
+    </ol>
   </body>
 </html>
