--- a/index.html
+++ b/index.html
@@ -2,37 +2,34 @@
 <html>
 
 <head>
-  <title> WEB </title>
+  <title> BIRTHSTONE </title>
   <meta charset=”utf-8”>
   <script src="master.js"></script>
   <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 
 <body style="background-color: white; color: black;">
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">탄생석</a></h1>
   <div id="grid">
     <ol>
-      <li><a href="1.html">HTML</a></li>
-      <li><a href="2.html">CSS</a></li>
-      <li><a href="3.html">JavaScript</a></li>
+      <li><a href="1.html">1월 석류석</a></li>
+      <li><a href="2.html">2월 자수정</a></li>
+      <li><a href="3.html">3월 남옥</a></li>
     </ol>
 
     <div id="article">
-      <input id="night_day1" type="button" value="night" onclick="nightDayHandler(this)">
-      <h2>WEB</h2>
+      <input id="night_day" type="button" value="night" onclick="nightDayHandler(this)">
+      <h2>탄생석</h2>
       <p>
-        The World Wide Web (WWW), commonly known as the Web, is an information system enabling documents and other web
-        resources to be accessed over the Internet.
+        태어난 달을 상징하는 보석
+        <button onclick="changeImg(this)"><img id="birthStone_img" src="https://cdn-icons-png.flaticon.com/512/6701/6701400.png" alt="탄생석" width="50px"></button>
       </p>
-      <img
-        src="https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80"
-        alt="web image" width="20%">
       <p>
-        Documents and downloadable media are made available to the network through web servers and can be accessed by
-        programs such as web browsers. Servers and resources on the World Wide Web are identified and located through
-        character strings called uniform resource locators (URLs).
+        18세기 유럽에서 생겨난 유행으로, 12가지 보석을 일 년 열두 달과 연결하여 의미를 부여한 것. 탄생석을 지닌 사람에게는 행운이 찾아온다고 한다. 
+        <br>
+        구약 성경에 나오는 '판결 흉패'에 들어간 12가지 보석, 신약 성경에 나오는 새 예루살렘 성곽에 들어갈 12가지 기포석에서 나왔다고 한다. 하지만 본격적으로 보석 업계에서 유행이 만들어진 것은 위에서 말했다시피 18세기이다. 유럽, 영국, 미국에서 각자 주력으로 손꼽는 탄생석이 조금씩 다르다. 
       </p>
-      <input id="night_day2" type="button" value="night" onclick="nightDayHandler(this)">
     </div>
   </div>
 </body>
